# Multi-AI-Agent4OnlineShopping

./: .dockerignore  .gitignore  ACCESS_GUIDE.md  ARCHITECTURE_EXPLANATION.md  BUG_FIXES.md  BUILD_GUIDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DOCKER_PACKAGE.md  DOCUMENTATION_ANALYSIS.md  ENV_SETUP.md  FILE_ANALYSIS.md  FINAL_FIXES.md  FIX_SUMMARY.md  FRONTEND_API_INTEGRATION.md  GITHUB_UPLOAD.md  GIT_ENCODING_FIX.md  QUICK_START.md  README.md  README_DOCKER.md  SECURITY.md  SERVER_DEPLOY.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  XOOBAY_API_INTEGRATION.md  XOOBAY_API_TEST_RESULT.md  XOOBAY_CONFIG_STATUS.md  XOOBAY_DEBUG_SUCCESS.md  XOOBAY_INTEGRATION_COMPLETE.md  XOOBAY_INTEGRATION_GUIDE.md  XOOBAY_INTEGRATION_STATUS.md  XOOBAY_SETUP_GUIDE.md  deploy.sh  docker-build.ps1  docker-build.sh  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  docker-start.ps1  env.example  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
agents/: Dockerfile  README.md  env.example  environment.yml  pyproject.toml
agents/scripts/: demo_shopping_flow.py
agents/src/: __init__.py  cli.py  config.py  main.py
agents/src/candidate/: __init__.py  node.py
agents/src/compliance/: __init__.py
agents/src/execution/: __init__.py  execution_node.py  plan_node.py
agents/src/graph/: __init__.py  builder.py  state.py
agents/src/intent/: __init__.py  node.py
agents/src/llm/: __init__.py  client.py  prompts.py  schemas.py
agents/src/models/: __init__.py  draft_order.py  evidence.py  mission.py
agents/src/orchestrator/: __init__.py
agents/src/tools/: __init__.py  base.py  catalog.py  checkout.py  compliance.py  evidence.py  pricing.py  shipping.py
agents/src/verifier/: __init__.py  node.py
agents/tests/: __init__.py  test_agent_flow.py  test_models.py
contracts/: error-codes.yaml
doc/: 00_overview.md  01_repo_structure.md  02_tech_stack.md  03_dev_process.md  04_tooling_spec.md  05_tool_catalog.md  06_evidence_audit.md  07_draft_order.md  08_aroc_schema.md  09_kg_design.md  10_rag_graphrag.md  11_multi_agent.md  (+7 more)
(+60 files in other folders)
